# ai_radar

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_ai_radar.py  run_manual.py  run_once.py
config/: __init__.py  models.yaml  obsidian.yaml  prompts.yaml  scoring.yaml  settings.py  sources.yaml
data/raw/: arxiv_20260310_010424.json
data/state/: last_run.json  seen_ids.json  seen_titles.json  seen_urls.json  source_checkpoints.json
docs/: architecture.md  models.md  obsidian_integration.md  scheduling.md  setup.md
logs/runs/: 20260310_021607.json
obsidian/00_Project/: 下一步.md  任务笔记 - AI Radar 搭建.md  常用命令.md  当前状态.md  数据说明.md  模块说明.md  版本迭代记录.md  系统架构.md  结果索引.md  问题与坑点.md  项目总览.md
obsidian/01_Log/: 会话日志.md
obsidian/03_Collectors/: Collector 设计.md
obsidian/04_Agents/: Agent 设计.md  去重设计.md  评分与标签设计.md
obsidian/05_Exporters/: Exporter 设计.md
obsidian/06_Automation/: 自动运行方案.md
obsidian/07_Prompts/: Prompt 设计.md
scripts/: generate_scheduler_assets.py  retry_failed_items.py  run_scheduler_once.sh  test_ollama.py
src/: __init__.py  cli.py  main.py  pipeline.py
src/agents/: __init__.py  deduper.py  quality_gate.py  scorer.py  summarizer.py  tagger.py  topic_aggregator.py
src/collectors/: __init__.py  (+7 more)
tests/: test_dashboard_exporter.py  test_deduper.py  test_exporter_archive_paths.py  test_failed_item_replayer.py  test_hackernews_collector.py  test_pipeline.py  test_quality_gate.py  test_scheduler_assets.py  test_scorer.py  test_summarizer.py  test_tagger.py  test_task_manager.py  test_time_utils.py  test_topic_aggregator.py
(+257 files in other folders)
